@startuml hiddlestick

!theme plain
skinparam ClassAttributeIconSize 0

class User{
    + ID : UUID
    + Handle : CHAR(23)
    + Name : VARCHAR(47)
    + Password : CHAR(128)
    + CreationTime : TIMESTAMP
}

class Post{
    + ID : UUID
    /'
    /+ CreatorID : UUID
    /+ StickerID : UUID
    '/
    + Media : UUID
    + MediaExtension : VARCHAR(7)
    + Content : VARCHAR(4095)
    + CreationTime : TIMESTAMP
}

class Sticker{
    + ID : UUID
    + Name : CHAR(31)
    /'
    /+ CreatorID : UUID
    '/
    + Description : VARCHAR(511)
    + CreationTime : TIMESTAMP
}

User "0..n" -- "0..n" User : aims at >
(User, User) . Shoot
User "1..1" -- "0..n" Post : creates >
User "1..1" -- "0..n" Sticker : creates >
Post "0..n" -- "1..1" Sticker : includes >
User "0..n" -- "0..n" Post : likes >
Session "1..n" -- "1..1" User : authenticates >
User "0..n" -- "0..1" Permission : has >
Permission "0..n" -- "1..1" PermissionLevel : means >
(User, Post) . Point
User "1..1" -- "0..n" Upload : sends >
Upload "0..n" -- "1..1" UploadType : is of >

class Shoot{
    /'
    /+ Target : UUID
    /+ Archer : UUID
    '/
    + Shot : TIMESTAMP
}

class Point{
    /'
    /+ PostID : UUID
    /+ UserID : UUID
    '/
    + Time : TIMESTAMP
}

class Session{
    /'
    /+ UserID : UUID
    '/
    + CreationTime : TIMESTAMP
    + Name : VARCHAR(127)
    + Token : UUID
    + ExpirationDate : DATE
}

class Permission{
    /'
    /+ UserID : UUID
    '/
    /'
    /+ Level : TINYINT
    '/
}

class PermissionLevel{
    + Level : TINYINT
    + Name : VARCHAR(15)
}

class UploadType{
    + Type : TINYINT
    + Name : VARCHAR(15);
}

class Upload{
    + ID : UUID
    + Extension : VARCHAR(7)
    + Type : TINYINT
    + UploaderID : UUID
    + UploadTime : TIMESTAMP
    + ExpirationTime : TIMESTAMP
}

@enduml